--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,8 @@ name: CI
 on:
   pull_request:
     branches: [ main ]
-    paths-ignore: [ "**/*.md", "docs/**" ]
   push:
     branches: [ main ]
-    paths-ignore: [ "**/*.md", "docs/**" ]
 
 permissions:
   contents: read
@@ -20,27 +18,75 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Detect Node project
+        id: detect
+        run: |
+          if [ -f package.json ]; then
+            echo "has_node=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_node=false" >> $GITHUB_OUTPUT
+          fi
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        if: steps.detect.outputs.has_node == 'true'
+        with:
+          node-version: 20
+          cache: npm
       - run: npm ci
+        if: steps.detect.outputs.has_node == 'true'
       - run: npm -ws run lint --if-present
+        if: steps.detect.outputs.has_node == 'true'
+      - name: No Node project — lint skipped (pass)
+        if: steps.detect.outputs.has_node != 'true'
+        run: echo "No package.json at repo root. Lint skipped."
 
   build:
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v4
+      - name: Detect Node project
+        id: detect
+        run: |
+          if [ -f package.json ]; then
+            echo "has_node=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_node=false" >> $GITHUB_OUTPUT
+          fi
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        if: steps.detect.outputs.has_node == 'true'
+        with:
+          node-version: 20
+          cache: npm
       - run: npm ci
+        if: steps.detect.outputs.has_node == 'true'
       - run: npm -ws run build --if-present
+        if: steps.detect.outputs.has_node == 'true'
+      - name: No Node project — build skipped (pass)
+        if: steps.detect.outputs.has_node != 'true'
+        run: echo "No package.json at repo root. Build skipped."
 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
+      - name: Detect Node project
+        id: detect
+        run: |
+          if [ -f package.json ]; then
+            echo "has_node=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_node=false" >> $GITHUB_OUTPUT
+          fi
       - uses: actions/setup-node@v4
-        with: { node-version: 20, cache: npm }
+        if: steps.detect.outputs.has_node == 'true'
+        with:
+          node-version: 20
+          cache: npm
       - run: npm ci
+        if: steps.detect.outputs.has_node == 'true'
       - run: npm -ws run test --if-present -- --ci
+        if: steps.detect.outputs.has_node == 'true'
+      - name: No Node project — test skipped (pass)
+        if: steps.detect.outputs.has_node != 'true'
+        run: echo "No package.json at repo root. Test skipped."
