--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Detect Node project
         id: detect
         run: |
@@ -26,15 +27,34 @@ jobs:
           else
             echo "has_node=false" >> $GITHUB_OUTPUT
           fi
+
       - uses: actions/setup-node@v4
         if: steps.detect.outputs.has_node == 'true'
         with:
           node-version: 20
           cache: npm
+
+      - name: Detect workspaces
+        id: ws
+        if: steps.detect.outputs.has_node == 'true'
+        run: |
+          if grep -q '"workspaces"' package.json; then
+            echo "has_ws=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_ws=false" >> $GITHUB_OUTPUT
+          fi
+
       - run: npm ci
         if: steps.detect.outputs.has_node == 'true'
-      - run: npm -ws run lint --if-present
-        if: steps.detect.outputs.has_node == 'true'
+
+      - name: Lint (root)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'false'
+        run: npm run lint --if-present
+
+      - name: Lint (workspaces)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
+        run: npm -ws run lint --if-present
+
       - name: No Node project — lint skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Lint skipped."
@@ -57,10 +77,23 @@ jobs:
         with:
           node-version: 20
           cache: npm
+      - name: Detect workspaces
+        id: ws
+        if: steps.detect.outputs.has_node == 'true'
+        run: |
+          if grep -q '"workspaces"' package.json; then
+            echo "has_ws=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_ws=false" >> $GITHUB_OUTPUT
+          fi
       - run: npm ci
         if: steps.detect.outputs.has_node == 'true'
-      - run: npm -ws run build --if-present
-        if: steps.detect.outputs.has_node == 'true'
+      - name: Build (root)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'false'
+        run: npm run build --if-present
+      - name: Build (workspaces)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
+        run: npm -ws run build --if-present
       - name: No Node project — build skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Build skipped."
@@ -83,10 +116,23 @@ jobs:
         with:
           node-version: 20
           cache: npm
+      - name: Detect workspaces
+        id: ws
+        if: steps.detect.outputs.has_node == 'true'
+        run: |
+          if grep -q '"workspaces"' package.json; then
+            echo "has_ws=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_ws=false" >> $GITHUB_OUTPUT
+          fi
       - run: npm ci
         if: steps.detect.outputs.has_node == 'true'
-      - run: npm -ws run test --if-present -- --ci
-        if: steps.detect.outputs.has_node == 'true'
+      - name: Test (root)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'false'
+        run: npm test --if-present -- --ci
+      - name: Test (workspaces)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
+        run: npm -ws run test --if-present -- --ci
       - name: No Node project — test skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
