--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jest-util": "^29.7.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.4.2",
     "ts-loader": "^9.5.2",
