--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,26 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: aurora_users
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+    env:
+      DB_HOST: 127.0.0.1
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_NAME: aurora_users
     steps:
       - uses: actions/checkout@v4
       - name: Detect Node project
@@ -126,6 +146,21 @@ jobs:
             echo "has_ws=false" >> $GITHUB_OUTPUT
           fi
       - run: npm ci
+        if: steps.detect.outputs.has_node == 'true'
+      - name: Install psql client (for readiness checks)
+        run: sudo apt-get update && sudo apt-get install -y postgresql-client
+        if: steps.detect.outputs.has_node == 'true'
+      - name: Wait for Postgres to be ready
+        env:
+          PGHOST: 127.0.0.1
+          PGPORT: 5432
+          PGUSER: postgres
+        run: |
+          for i in $(seq 1 60); do
+            pg_isready -h 127.0.0.1 -p 5432 -U postgres && break
+            echo "Waiting for postgres... ($i/60)"
+            sleep 1
+          done
         if: steps.detect.outputs.has_node == 'true'
       - name: Test (root)
         if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'false'
