--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       DB_LOGGING: false
       PORT: 3001
       NODE_ENV: production
+      USERS_API_URL: http://localhost:3001/v1
     depends_on:
       db:
         condition: service_healthy
