--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ NODE_ENV=production
 
 # JWT Configuration
 JWT_ACCESS_SECRET=your_jwt_access_secret_here
+# Development-only helper: set to 'true' to auto-inject a fake authenticated
+# user when no Authorization header is present. Use only for local testing.
+# DEV_AUTO_AUTH=false
