chore(auth-service): exclude extracted-auth from tsconfig

--- a/packages/auth-service/tsconfig.json
+++ b/packages/auth-service/tsconfig.json
@@ -12,5 +12,5 @@
   },
   "include": ["src/**/*", "test/**/*"]
   ,
-  "exclude": ["src/auth/**"]
+  "exclude": ["src/auth/**", "extracted-auth/**"]
 }
