--- a/packages/users-service/tsconfig.nest.json
+++ b/packages/users-service/tsconfig.nest.json
@@ -1,19 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
     "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "target": "ES2021",
     "sourceMap": true,
+    "outDir": "./dist",
+    "rootDir": "src",
+    "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
