--- a/packages/events-service/package.json
+++ b/packages/events-service/package.json
@@ -2,8 +2,8 @@
 	"name": "events-service",
 	"version": "0.1.0",
 	"private": true,
-	"main": "dist/server.js",
-	"types": "dist/index.d.ts",
+	"main": "dist/main.js",
+	"types": "dist/main.d.ts",
 	"scripts": {
 		"dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
 		"build": "tsc -p tsconfig.json",
@@ -42,7 +42,8 @@
 		"ts-node": "^10.9.2",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.9.3",
-		"yaml": "^2.8.1"
+		"yaml": "^2.8.1",
+		"pm2": "^5.2.0"
 	},
 	"description": "Events service scaffold (Express + TypeScript).",
 	"keywords": [],
