--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -5,8 +5,8 @@
   "description": "Scaffold do auth-service extraído do monolito para fins didáticos",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js",
+  "build": "tsc -p tsconfig.json",
+  "start": "node dist/src/main.js",
   "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
   "demo": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest",
@@ -16,7 +16,23 @@
   "license": "MIT",
   "dependencies": {
     "yaml": "^2.2.1",
-    "express": "^4.18.2"
+  "@nestjs/common": "^11.1.9",
+  "@nestjs/core": "^11.1.9",
+  "@nestjs/platform-express": "^11.1.9",
+  "@nestjs/jwt": "^11.0.0",
+  "@nestjs/passport": "^11.0.0",
+  "@nestjs/typeorm": "^11.0.0",
+  "@nestjs/config": "^4.0.2",
+  "@nestjs/swagger": "^11.2.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+  "typeorm": "^0.3.27",
+  "reflect-metadata": "^0.2.2",
+  "pg": "^8.16.3",
+    "axios": "^1.5.0",
+    "argon2": "^0.31.0",
+  "class-validator": "^0.14.2",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
@@ -25,7 +41,6 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0",
     "supertest": "^6.3.3",
-    "@types/express": "^4.17.17",
     "@types/supertest": "^2.0.12"
   }
 }
