--- a/packages/auth-service/tsconfig.json
+++ b/packages/auth-service/tsconfig.json
@@ -3,6 +3,8 @@
     "module": "commonjs",
     "target": "es2020",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
