--- a/packages/users-service/package.json
+++ b/packages/users-service/package.json
@@ -5,24 +5,46 @@
   "main": "dist/main.js",
   "types": "dist/index.d.ts",
   "scripts": {
-  "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-  "build": "tsc -p tsconfig.json",
-  "start": "node dist/main.js",
-  "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-  "start:prod": "node dist/main.js",
-  "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json"
+    "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/main.js",
+    "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "start:prod": "node dist/main.js",
+    "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
+    "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate -n",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert"
+  },
+  "scripts": {
+    "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/main.js",
+    "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "start:prod": "node dist/main.js",
+    "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
+    "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate -n",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "test": "jest --runInBand"
   },
   "dependencies": {
+    "yaml": "^2.2.1",
     "@nestjs/common": "^11.1.9",
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/swagger": "^11.2.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "cors": "^2.8.5",
+    "typeorm": "^0.3.27",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "uuid": "^9.0.0"
+    "pg": "^8.16.3",
+    "axios": "^1.5.0",
+    "argon2": "^0.31.0",
+    "class-validator": "^0.14.2",
+    "class-transformer": "^0.5.1",
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
