chore(auth): add token revocation and service-token guards; fix auth flow

--- a/packages/auth-service/tsconfig.json
+++ b/packages/auth-service/tsconfig.json
@@ -10,7 +10,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@aurora/common": ["../common/dist"],
+      "@aurora/common/*": ["../common/dist/*"]
+    }
   },
   "include": ["src/**/*", "test/**/*"]
 }
