--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
   # `app` service removed — use per-package services (e.g. `events-service`) instead.
 
   events-service:
-    build: ./packages/events-service
+    build:
+      context: .
+      dockerfile: ./packages/events-service/Dockerfile
     container_name: aurora_events_service
     restart: unless-stopped
     ports:
@@ -40,15 +42,18 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - ./packages/events-service:/app
-      - /app/node_modules
+    # development mount removed so the container runs the built image
+    # volumes:
+    #  - ./packages/events-service:/app
+    #  - /app/node_modules
     command: npm run start:dev
     networks:
       - aurora_network
 
   auth-service:
-    build: ./packages/auth-service
+    build:
+      context: .
+      dockerfile: ./packages/auth-service/Dockerfile
     container_name: aurora_auth_service
     restart: unless-stopped
     ports:
@@ -62,20 +67,23 @@ services:
       DB_SCHEMA: auth
       PORT: 3010
       NODE_ENV: development
-      USERS_API_URL: 'http://users:3011'
+      USERS_API_URL: 'http://users-service:3011'
       DEV_AUTO_AUTH: 'true'
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - ./packages/auth-service:/app
-      - /app/node_modules
-    command: "npm run start"
+    # development mount removed so the container runs the built image
+    # volumes:
+    #   - ./packages/auth-service:/app
+    #   - /app/node_modules
+    command: "node dist/src/main.js"
     networks:
       - aurora_network
   
-  users:
-    build: ./packages/users-service
+  users-service:
+    build:
+      context: .
+      dockerfile: ./packages/users-service/Dockerfile
     container_name: aurora_users_service
     restart: unless-stopped
     ports:
