--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typeorm": "typeorm-ts-node-commonjs -d src/database/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate -n",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "update:password":"ts-node -r tsconfig-paths/register scripts/update-password.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
