--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -30,10 +30,13 @@
   "reflect-metadata": "^0.2.2",
   "pg": "^8.16.3",
     "axios": "^1.5.0",
-    "argon2": "^0.31.0",
+    "jsonwebtoken": "^9.0.0",
+    "bcryptjs": "^2.4.3",
+    "@aurora/common": "file:../common",
   "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1"
   },
+  
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "jest": "^29.5.0",
