--- a/packages/users-service/package.json
+++ b/packages/users-service/package.json
@@ -7,21 +7,9 @@
   "scripts": {
     "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js",
+    "start": "node dist/src/main.js",
     "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-    "start:prod": "node dist/main.js",
-    "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
-    "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
-    "migration:generate": "npm run typeorm -- migration:generate -n",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
-  },
-  "scripts": {
-    "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/main.js",
-    "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-    "start:prod": "node dist/main.js",
+    "start:prod": "node dist/src/main.js",
     "start:pm2": "pm2 start --name users-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
     "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
     "migration:generate": "npm run typeorm -- migration:generate -n",
@@ -37,11 +25,16 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/swagger": "^11.2.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "typeorm": "^0.3.27",
     "reflect-metadata": "^0.2.2",
     "pg": "^8.16.3",
     "axios": "^1.5.0",
-    "argon2": "^0.31.0",
+    "bcryptjs": "^2.4.3",
+    "@aurora/common": "file:../common",
     "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1",
     "dotenv": "^17.2.2"
