--- a/packages/users-service/tsconfig.json
+++ b/packages/users-service/tsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "commonjs",
-    "rootDir": "src",
+    "rootDir": ".",
+    "baseUrl": ".",
+    "paths": {
+      "@aurora/common": ["../common/dist"],
+      "@aurora/common/*": ["../common/dist/*"]
+    },
     "outDir": "dist",
     "declaration": true,
     "removeComments": true,
