--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
+# Environment example (não comitar segredos reais)
+# Copie para `.env` e preencha com valores reais antes de executar a aplicação
+
+# Service token usado por serviços internos para chamadas entre serviços
+SERVICE_TOKEN=change-me-to-a-strong-secret
+
+# JWT secrets (troque em produção)
+JWT_ACCESS_SECRET=dev_access_secret
+JWT_REFRESH_SECRET=dev_refresh_secret
+
+# Refresh token TTL (dias)
+REFRESH_EXPIRES_DAYS=7
+
+# Postgres connection (exemplo)
+# DATABASE_URL=postgres://user:password@localhost:5432/aurora
 # Database Configuration
 DB_HOST=db
 DB_PORT=5432
