--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,17 @@ services:
     environment:
       PORT: 3011
       NODE_ENV: development
+      # Pass SERVICE_TOKEN from the host environment into the container
+      SERVICE_TOKEN: ${SERVICE_TOKEN}
+      # Database connection for in-docker networking
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: aurora_db
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_SCHEMA: users
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
