--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,10 @@ services:
       NODE_ENV: development
       USERS_API_URL: 'http://users-service:3011'
       DEV_AUTO_AUTH: 'true'
+      # Pass SERVICE_TOKEN from the host environment into the container
+      SERVICE_TOKEN: ${SERVICE_TOKEN}
+    env_file:
+      - .env
     depends_on:
       db:
         condition: service_healthy
