chore: add test script to common and events-service packages

--- a/packages/events-service/package.json
+++ b/packages/events-service/package.json
@@ -6,6 +6,7 @@
 	"types": "dist/main.d.ts",
 	"scripts": {
 		"dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+		"test": "jest --runInBand",
 		"build": "tsc -p tsconfig.json",
 		"start": "node dist/main.js",
 		"start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
