--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "class-validator": "^0.14.2",
