--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,6 @@ services:
     networks:
       - aurora_network
 
-  # `app` service removed — use per-package services (e.g. `events-service`) instead.
-
   events-service:
     build:
       context: .
@@ -30,12 +28,12 @@ services:
     restart: unless-stopped
     ports:
       - '3012:3012'
+    # Load sensitive configuration (DB credentials, SERVICE_TOKEN, JWT secrets, etc.)
+    # from the repository `.env` file instead of baking them in the compose file.
+    env_file:
+      - .env
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: aurora_db
-      DB_USER: postgres
-      DB_PASS: postgres
+      # Keep service-specific overrides here only (non-sensitive):
       DB_SCHEMA: events
       PORT: 3012
       NODE_ENV: development
@@ -46,7 +44,7 @@ services:
     # volumes:
     #  - ./packages/events-service:/app
     #  - /app/node_modules
-    command: npm run start:dev
+    command: node dist/main.js
     networks:
       - aurora_network
 
@@ -58,21 +56,16 @@ services:
     restart: unless-stopped
     ports:
       - '3010:3010'
+    # Load sensitive vars from .env and keep only non-sensitive overrides here
+    env_file:
+      - .env
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: aurora_db
-      DB_USER: postgres
-      DB_PASS: postgres
+      # Keep service-specific overrides here only (non-sensitive):
       DB_SCHEMA: auth
       PORT: 3010
       NODE_ENV: development
       USERS_API_URL: 'http://users-service:3011'
       DEV_AUTO_AUTH: 'true'
-      # Pass SERVICE_TOKEN from the host environment into the container
-      SERVICE_TOKEN: ${SERVICE_TOKEN}
-    env_file:
-      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -92,20 +85,14 @@ services:
     restart: unless-stopped
     ports:
       - '3011:3011'
+    # Load sensitive vars from .env and keep only non-sensitive overrides here
+    env_file:
+      - .env
     environment:
       PORT: 3011
       NODE_ENV: development
-      # Pass SERVICE_TOKEN from the host environment into the container
-      SERVICE_TOKEN: ${SERVICE_TOKEN}
-      # Database connection for in-docker networking
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: aurora_db
-      DB_USER: postgres
-      DB_PASS: postgres
+      # keep per-service DB_SCHEMA override
       DB_SCHEMA: users
-    env_file:
-      - .env
     depends_on:
       db:
         condition: service_healthy
