--- a/packages/events-service/package.json
+++ b/packages/events-service/package.json
@@ -1,57 +1,57 @@
 {
-	"name": "events-service",
-	"version": "0.1.0",
-	"private": true,
-	"main": "dist/main.js",
-	"types": "dist/main.d.ts",
-	"scripts": {
-		"dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-		"test": "jest --runInBand",
-		"build": "tsc -p tsconfig.json",
-		"start": "node dist/main.js",
-		"start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
-		"start:pm2": "pm2 start --name events-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json"
-	},
-	"dependencies": {
-		"@aurora/common": "file:../common",
-		"@nestjs/common": "^11.1.9",
-		"@nestjs/core": "^11.1.9",
-		"@nestjs/platform-express": "^11.1.9",
-		"@nestjs/swagger": "^11.2.2",
-		"@nestjs/typeorm": "^11.0.0",
-		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.2",
-		"cors": "^2.8.5",
-		"dedent": "^1.7.0",
-		"express": "^4.21.2",
-		"express-openapi-validator": "^5.6.0",
-		"express-validator": "^7.3.0",
-		"pg": "^8.16.3",
-		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.2",
-		"typeorm": "^0.3.27",
-		"uid": "^2.0.2",
-		"uuid": "^9.0.0"
-	},
-	"devDependencies": {
-		"@nestjs/cli": "^11.0.10",
-		"@nestjs/testing": "^11.1.9",
-		"@types/cors": "^2.8.12",
-		"@types/express": "^4.17.17",
-		"@types/jest": "^30.0.0",
-		"@types/node": "^20.19.25",
-		"@types/uuid": "^9.0.2",
-		"jest": "^30.2.0",
-		"pm2": "^5.2.0",
-		"ts-jest": "^29.4.5",
-		"ts-node": "^10.9.2",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.9.3",
-		"yaml": "^2.8.1"
-	},
-	"description": "Events service scaffold (Express + TypeScript).",
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"type": "commonjs"
+  "name": "events-service",
+  "version": "0.1.0",
+  "private": true,
+  "main": "dist/main.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/src/main.js",
+    "start:dev": "npx ts-node -P tsconfig.nest.json src/main.ts",
+    "start:prod": "node dist/src/main.js",
+    "start:pm2": "pm2 start --name events-service --interpreter 'npx' -- src/main.ts -- -P tsconfig.nest.json",
+    "typeorm": "npx typeorm-ts-node-commonjs -d src/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate -n",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "test": "jest --runInBand"
+  },
+  "dependencies": {
+    "@aurora/common": "file:../common",
+    "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
+    "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/swagger": "^11.2.2",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "dotenv": "^17.2.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
+    "uuid": "^9.0.0",
+    "yaml": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.4.2",
+    "@types/uuid": "^9.0.2",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.0",
+    "yaml": "^2.8.1"
+  },
+  "description": "Events service (Nest + TypeScript).",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
