fix: exclude integration tests from local runs, run in CI only
- Auth-service jest.config.ts now excludes integration tests by default
- CI workflow has explicit step to run integration tests with DB env vars
- Local tests pass without DB dependency
- Integration tests run in CI with Postgres service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,15 @@ jobs:
       - name: Test (workspaces)
         if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
         run: npm -ws run test --if-present -- --ci
+      - name: Integration tests (auth-service)
+        if: steps.detect.outputs.has_node == 'true' && steps.ws.outputs.has_ws == 'true'
+        env:
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_USER: postgres
+          DB_PASS: postgres
+          DB_NAME: aurora_users
+        run: npm --workspace @aurora/auth-service run test -- --testPathPattern=integration --ci
       - name: No Node project — test skipped (pass)
         if: steps.detect.outputs.has_node != 'true'
         run: echo "No package.json at repo root. Test skipped."
