fix(ci): use separate jest config for integration tests
- Created jest.integration.config.ts for auth-service integration tests
- Added test:integration script in package.json
- CI now uses test:integration script which doesn't conflict with testPathIgnorePatterns

--- a/packages/auth-service/package.json
+++ b/packages/auth-service/package.json
@@ -10,8 +10,8 @@
   "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
   "demo": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest",
-    "contract:test": "jest --testPathPattern=contract",
-    "integration:test": "jest --testPathPattern=integration"
+    "test:integration": "jest --config jest.integration.config.ts",
+    "contract:test": "jest --testPathPattern=contract"
   },
   "license": "MIT",
   "dependencies": {
