fix: corrige caminhos do main.js para dist/app/src/main.js
O build TypeScript com rootDir='..' gera dist/app/src/main.js
- auth-service: dist/src/main.js → dist/app/src/main.js
- users-service: dist/src/main.js → dist/app/src/main.js
- events-service já está correto com dist/main.js

--- a/packages/auth-service/Dockerfile
+++ b/packages/auth-service/Dockerfile
@@ -33,4 +33,4 @@ COPY --from=builder /usr/src/app/dist ./dist
 
 # service listens on 3010 by default in this project
 EXPOSE 3010
-CMD ["node", "dist/src/main.js"]
+CMD ["node", "dist/app/src/main.js"]
