--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     container_name: aurora-db-deploy
@@ -25,7 +23,7 @@ services:
   users-service:
     # IMAGEM: troque USER_ORG/REPO e TAG se necessário (ex.: ghcr.io/my-org/users-service:sha-<commit>)
     container_name: aurora-users-deploy
-    image: ghcr.io/REPO_OWNER/users-service:${USERS_IMAGE_TAG:-latest}
+    image: ghcr.io/${REPO_OWNER}/users-service:${USERS_IMAGE_TAG:-latest}
     restart: unless-stopped
     env_file:
       - .env.prod
@@ -38,6 +36,8 @@ services:
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
+      SERVICE_TOKEN: ${SERVICE_TOKEN}
+      HASH_PEPPER: ${HASH_PEPPER:-}
     depends_on:
       db:
         condition: service_healthy
@@ -48,7 +48,7 @@ services:
 
   auth-service:
     container_name: aurora-auth-deploy
-    image: ghcr.io/REPO_OWNER/auth-service:${AUTH_IMAGE_TAG:-latest}
+    image: ghcr.io/${REPO_OWNER}/auth-service:${AUTH_IMAGE_TAG:-latest}
     restart: unless-stopped
     env_file:
       - .env.prod
@@ -63,6 +63,7 @@ services:
       DB_NAME: ${POSTGRES_DB}
       USERS_API_URL: "http://users-service:3011"
       JWT_ACCESS_SECRET: ${JWT_ACCESS_SECRET}
+      SERVICE_TOKEN: ${SERVICE_TOKEN}
     depends_on:
       db:
         condition: service_healthy
@@ -75,7 +76,7 @@ services:
 
   events-service:
     container_name: aurora-events-deploy
-    image: ghcr.io/REPO_OWNER/events-service:${EVENTS_IMAGE_TAG:-latest}
+    image: ghcr.io/${REPO_OWNER}/events-service:${EVENTS_IMAGE_TAG:-latest}
     restart: unless-stopped
     env_file:
       - .env.prod
