docs: add PAT rotation guidance and non-interactive secret setup

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ JWT_ACCESS_SECRET=your_jwt_access_secret_here
 # Development-only helper: set to 'true' to auto-inject a fake authenticated
 # user when no Authorization header is present. Use only for local testing.
 # DEV_AUTO_AUTH=false
+
+# --- VPS / Deploy (example) ---
+# IP público da sua VM usada nos scripts de deploy / GitHub Actions
+SEU_VPS_HOST=64.181.173.121
