fix(deploy): corrigir variável DB_PASSWORD para DB_PASS
Os serviços NestJS usam DB_PASS no código (data-source.ts e app.module.ts),
mas o docker-compose.deploy.yml estava definindo DB_PASSWORD.

Alterações:
- users-service: DB_PASSWORD -> DB_PASS
- auth-service: DB_PASSWORD -> DB_PASS
- events-service: DB_PASSWORD -> DB_PASS

--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -34,7 +34,7 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
       SERVICE_TOKEN: ${SERVICE_TOKEN}
       HASH_PEPPER: ${HASH_PEPPER:-}
@@ -59,7 +59,7 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
       USERS_API_URL: "http://users-service:3011"
       JWT_ACCESS_SECRET: ${JWT_ACCESS_SECRET}
@@ -87,7 +87,7 @@ services:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PASS: ${POSTGRES_PASSWORD}
       DB_NAME: ${POSTGRES_DB}
     depends_on:
       db:
