registrations-service: add automated migration runner and docker-compose service; update main.ts with dev auto-auth

--- a/packages/registrations-service/package.json
+++ b/packages/registrations-service/package.json
@@ -14,6 +14,7 @@
     "migration:generate": "npm run typeorm -- migration:generate -n",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert",
+    "migrate:js": "node dist/run-migrations.js",
     "test": "jest --runInBand --passWithNoTests"
   },
   "dependencies": {
