--- a/packages/registrations-service/tsconfig.json
+++ b/packages/registrations-service/tsconfig.json
@@ -2,12 +2,8 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "commonjs",
-    "rootDir": "..",
-    "baseUrl": ".",
-    "paths": {
-      "@aurora/common": ["../common/src"],
-      "@aurora/common/*": ["../common/src/*"]
-    },
+    "rootDir": "src",
+    
     "outDir": "dist",
     "declaration": true,
     "removeComments": true,
@@ -20,6 +16,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "../common/src"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
